# tanakh

./: .gitignore  Makefile.am  Makefile.in  README.md  aclocal.m4  builder.go  configure  configure.ac  data.sql  go.mod  go.sum  tanakh.crt  tanakh.db  tanakh.go  tanakh.key
config/: config.go.in
daemon/: daemon.go
front/: angular.json  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.spec.json
front/src/: index.html  main.ts  polyfills.ts
front/src/app/: app.component.ts  app.module.ts  login.service.ts  page.guard.ts  routing.module.ts  sample.service.ts  user.service.ts
front/src/app/layout/: layout.component.html  layout.component.ts
front/src/app/login/: login.component.html  login.component.ts
front/src/app/menu/: menu.component.html  menu.component.ts
front/src/app/not-found/: not-found.component.html
front/src/app/pager/: pager.component.html  pager.component.ts
front/src/app/samples/: samples.component.html  samples.component.ts
front/src/app/user-create/: user-create.component.html  user-create.component.ts
front/src/app/user-delete/: user-delete.component.html  user-delete.component.ts
front/src/app/user-option/: user-option.component.html  user-option.component.ts
front/src/scss/: _app-after.scss  _app-before.scss  app.scss
public/: 3rdpartylicenses.txt  index.html  main.75c02a3e854f30d6184c.js  scripts.be020cc1a41ffe461cfc.js  styles.c4ab31d5ce5eaaa39af5.css
server/: server.go
server/sample-controller/: sample_controller.go  sample_controller_test.go
server/sample-model/: sample_model.go  sample_model_test.go
server/user-controller/: user_controller.go  user_controller_test.go
server/user-model/: user_model.go  user_model_test.go
tools/: file.go
(+4 files in other folders)
